﻿Version 2.2

- Add configurable XML translation framework (based on BloodyPenguin's translation framework)
- Add Traditional Chinese translation by M.S.Referee
- Mod now responds to in-game language changes
- Add active detection of prefabs that failed game init
- Settings category filter buttons now toggle on shift- or control-click
- Performance improvement: deactivate ploppable panel when not visible
- Performance improvement: destroy settings panel when not visible
- Standardise all logging


Version 2.1.2

- Add check to ensure that InitPrefab patch has applied and operated
- Add mod compatibility check for old Painter mod
- Streamlined notification messaging


Version 2.1.1

- Add mod options panel setting to toggle forced update of existing building stats on game load
- Add exception catcher for monuments panel setup (stop game hanging during load due to no valid monuments)


Version 2.1

- Add mod options panel setting for plain or skybox thumbnail backgrounds
- Add mod options panel setting for extra debugging logging and reduce default logging detail
- Add mod options panel button to regenerate building buttons
- When creating local settings from growables, set growable option by default and pre-populate with home/workplace counts from original prefab
- Adjust render lighting angle to reduce effects of themes with over-saturated light
- Override theme exposure and sky tint when rendering previews
- Use first submesh as render mesh when it has more tris than main mesh
- Wait until confirmation level is fully loaded before generating thumbnails
- Force override of thumbnail tooltips on display (to ensure nothing else is overriding them)
- Only force building household count updates when actual counts differ from specified
- Use EnableCitizenUnits reverse redirect to reallocate household counts where actual counts are lower than specified
- Add dynamic positioning of settings button in building info panels; aligns with Repaint color patch